--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
+  <!-- LESS Compiler -->
   <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
   <script src="scripts/less.min.js" type="text/javascript"></script>
   <meta charset="UTF-8">
@@ -8,55 +9,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
+  <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <!-- Header -->
-  <nav class="header">
+  <nav id="header">
     <div class="logo">
-      <i class="fa-solid fa-graduation-cap"></i>
+      <i class="fa fa-solid fa-graduation-cap"></i>
       <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     </div>
     <ul>
 
-      <!-- <li>
+      <!-- Local Header -->
+      <li>
         <a href="#top">
-          <i class="fa-solid fa-house-user"></i>
+          <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="reviews.html">
-          <i class="fa-solid fa-star"></i>
+          <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="contacts.html">
-          <i class="fa-solid fa-phone"></i>
+          <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
-      <li>
+      <!-- Web Header -->
+      <!-- <li>
         <a href="#top">
-          <i class="fa-solid fa-house-user"></i>
+          <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/reviews">
-          <i class="fa-solid fa-star"></i>
+          <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/contacts">
-          <i class="fa-solid fa-phone"></i>
+          <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
     </ul>
   </nav>
