--- a/contacts.html
+++ b/contacts.html
@@ -1,86 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
+  <!-- LESS Compiler -->
   <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
   <script src="scripts/less.min.js" type="text/javascript"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Контакты | Репетитор Маркелов А.В.</title>
+  <title>Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
+  <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <!-- Header -->
-  <nav class="header">
+  <nav id="header">
     <div class="logo">
-      <i class="fa-solid fa-graduation-cap"></i>
+      <i class="fa fa-solid fa-graduation-cap"></i>
       <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     </div>
     <ul>
 
-      <!-- <li>
+      <!-- Local Header -->
+      <li>
         <a href="index.html">
-          <i class="fa-solid fa-house-user"></i>
+          <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="reviews.html">
-          <i class="fa-solid fa-star"></i>
+          <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="#top">
-          <i class="fa-solid fa-phone"></i>
+          <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
-      <li>
+      <!-- Web Header -->
+      <!-- <li>
         <a href="https://vesselchuck.github.io">
-          <i class="fa-solid fa-house-user"></i>
+          <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/reviews">
-          <i class="fa-solid fa-star"></i>
+          <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="#top">
-          <i class="fa-solid fa-phone"></i>
+          <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
     </ul>
   </nav>
 
-  <!-- Review Columns -->
+  <!-- Contact Details -->
   <section id="main">
-
-    <!-- Review -->
     <div id="contact-card" class="card flex">
+
       <div class="card-image">
           <img src="assets/gb-flag.webp" alt="Флаг Великобритании «Юнион Джек»" title="Флаг Великобритании «Юнион Джек»">
       </div>
-      <div class="card-body">
 
-        <div>
-          <div class="text">
-            <p class="info">Позвоните, либо же напишите мне, если желаете получить консультацию об отдельных вопросах или назначить пробное занятие. Во время этого занятия мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды.</p>
-          </div>
+      <div>
+        <div class="text">
+          <p class="info">Позвоните, либо же напишите мне, если желаете получить консультацию об отдельных вопросах или назначить пробное занятие. Во время этого занятия мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды.</p>
         </div>
 
         <div class="h-card vcard flex wrap">
           <div class="phone">
             <h3 class="title">
-              <i class="fa-solid fa-phone"></i>
+              <i class="fa fa-solid fa-phone"></i>
               <span>Телефон</span>
             </h3>
             <div class="text">
@@ -90,7 +91,7 @@
 
           <div>
             <h3 class="title">
-              <i class="fa-solid fa-at"></i>
+              <i class="fa fa-solid fa-at"></i>
               <span>Электронная почта</span>
             </h3>
             <div class="text">
@@ -100,7 +101,7 @@
 
           <div class="discord">
             <h3 class="title">
-              <i class="fa-brands fa-discord"></i>
+              <i class="fa fa-brands fa-discord"></i>
               <span>Discord</span>
             </h3>
             <div class="text">
@@ -110,7 +111,7 @@
 
           <div>
             <h3 class="title">
-              <i class="fa-brands fa-telegram"></i>
+              <i class="fa fa-brands fa-telegram"></i>
               <span>Telegram</span>
             </h3>
             <div class="text">
@@ -119,14 +120,12 @@
           </div>
         </div>
 
-        <div class="work-time">
-          <h3 class="title">
-            <i class="fa-solid fa-clock"></i>
-            <span>Рабочие часы</span>
-          </h3>
-          <div class="text">
-            <p>Провожу занятия, в основном, с <strong>14:00</strong> и до <strong>21:00</strong> по московскому времени. Желательно, связываться со мной до или после этого периода времени, либо ограничится сообщением.</p>
-          </div>
+        <h3 class="title">
+          <i class="fa fa-solid fa-clock"></i>
+          <span>Рабочие часы</span>
+        </h3>
+        <div class="text">
+          <p>Провожу занятия, в основном, с <strong>14:00</strong> и до <strong>21:00</strong> по московскому времени. Желательно, связываться со мной до или после этого периода времени, либо ограничится сообщением.</p>
         </div>
 
       </div>
