--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,8 @@
   <!-- LESS Compiler -->
   <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
   <script src="scripts/less.min.js" type="text/javascript"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +16,11 @@
 </head>
 <body>
 
+  <!-- Go Up Button -->
+  <button id="upBtn" title="Наверх">
+    <i class="fa-solid fa-chevron-up"></i>
+  </button>
+
   <!-- Header -->
   <nav id="header">
     <div class="logo">
@@ -23,7 +30,7 @@
     <ul>
 
       <!-- Local Header -->
-      <li>
+      <!-- <li>
         <a href="index.html">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -36,14 +43,14 @@
         </a>
       </li>
       <li>
-        <a href="#top">
+        <a href="contacts.html">
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
       <!-- Web Header -->
-      <!-- <li>
+      <li>
         <a href="https://vesselchuck.github.io">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
@@ -56,11 +63,11 @@
         </a>
       </li>
       <li>
-        <a href="#top">
+        <a href="https://vesselchuck.github.io/contacts">
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
     </ul>
   </nav>
