--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <!-- LESS Compiler -->
   <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
   <script src="scripts/less.min.js" type="text/javascript"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +13,15 @@
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
+
+  <script src="scripts/upBtn.js"></script>
 </head>
 <body>
+
+  <!-- Go Up Button -->
+  <button id="upBtn" title="Наверх">
+    <i class="fa-solid fa-chevron-up"></i>
+  </button>
 
   <!-- Header -->
   <nav id="header">
@@ -23,8 +32,8 @@
     <ul>
 
       <!-- Local Header -->
-      <li>
-        <a href="#top">
+      <!-- <li>
+        <a href="index.html">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
@@ -40,11 +49,11 @@
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
       <!-- Web Header -->
-      <!-- <li>
-        <a href="#top">
+      <li>
+        <a href="https://vesselchuck.github.io">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
@@ -60,7 +69,7 @@
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
     </ul>
   </nav>
