--- a/reviews.html
+++ b/reviews.html
@@ -4,6 +4,8 @@
   <!-- LESS Compiler -->
   <link rel="stylesheet/less" type="text/css" href="styles/style.less" />
   <script src="scripts/less.min.js" type="text/javascript"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +15,14 @@
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
   <!-- Masonry Library -->
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <script src="scripts/masonry-responsive.js"></script>
+  <script src="scripts/masonry-resp+upBtn.js"></script>
 </head>
 <body>
+
+  <!-- Go Up Button -->
+  <button id="upBtn" title="Наверх">
+    <i class="fa-solid fa-chevron-up"></i>
+  </button>
 
   <!-- Header -->
   <nav id="header">
@@ -26,14 +33,14 @@
     <ul>
 
       <!-- Local Header -->
-      <li>
+      <!-- <li>
         <a href="index.html">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
-        <a href="#top">
+        <a href="reviews.html">
           <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
@@ -43,17 +50,17 @@
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li>
+      </li> -->
 
       <!-- Web Header -->
-      <!-- <li>
+      <li>
         <a href="https://vesselchuck.github.io">
           <i class="fa fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
-        <a href="#top">
+        <a href="https://vesselchuck.github.io/reviews">
           <i class="fa fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
@@ -63,7 +70,7 @@
           <i class="fa fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
-      </li> -->
+      </li>
 
     </ul>
   </nav>
