--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
+  <!-- Go Up Button JS -->
+  <script src="scripts/upBtn.js"></script>
 </head>
 <body>
 
@@ -24,7 +26,7 @@
   <!-- Header -->
   <nav id="header">
     <div class="logo">
-      <i class="fa fa-solid fa-graduation-cap"></i>
+      <i class="fa-solid fa-graduation-cap"></i>
       <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     </div>
     <ul>
@@ -32,19 +34,19 @@
       <!-- Local Header -->
       <!-- <li>
         <a href="index.html">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="reviews.html">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="contacts.html">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li> -->
@@ -52,19 +54,19 @@
       <!-- Web Header -->
       <li>
         <a href="https://vesselchuck.github.io">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/reviews">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/contacts">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li>
@@ -88,7 +90,7 @@
         <div class="h-card vcard flex wrap">
           <div class="phone">
             <h3 class="title">
-              <i class="fa fa-solid fa-phone"></i>
+              <i class="fa-solid fa-phone"></i>
               <span>Телефон</span>
             </h3>
             <div class="text">
@@ -98,7 +100,7 @@
 
           <div>
             <h3 class="title">
-              <i class="fa fa-solid fa-at"></i>
+              <i class="fa-solid fa-at"></i>
               <span>Электронная почта</span>
             </h3>
             <div class="text">
@@ -108,7 +110,7 @@
 
           <div class="discord">
             <h3 class="title">
-              <i class="fa fa-brands fa-discord"></i>
+              <i class="fa-brands fa-discord"></i>
               <span>Discord</span>
             </h3>
             <div class="text">
@@ -118,7 +120,7 @@
 
           <div>
             <h3 class="title">
-              <i class="fa fa-brands fa-telegram"></i>
+              <i class="fa-brands fa-telegram"></i>
               <span>Telegram</span>
             </h3>
             <div class="text">
@@ -128,7 +130,7 @@
         </div>
 
         <h3 class="title">
-          <i class="fa fa-solid fa-clock"></i>
+          <i class="fa-solid fa-clock"></i>
           <span>Рабочие часы</span>
         </h3>
         <div class="text">
