--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
-
+  <!-- Go Up Button JS -->
   <script src="scripts/upBtn.js"></script>
 </head>
 <body>
@@ -26,7 +26,7 @@
   <!-- Header -->
   <nav id="header">
     <div class="logo">
-      <i class="fa fa-solid fa-graduation-cap"></i>
+      <i class="fa-solid fa-graduation-cap"></i>
       <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     </div>
     <ul>
@@ -34,19 +34,19 @@
       <!-- Local Header -->
       <!-- <li>
         <a href="index.html">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="reviews.html">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="contacts.html">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li> -->
@@ -54,19 +54,19 @@
       <!-- Web Header -->
       <li>
         <a href="https://vesselchuck.github.io">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/reviews">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/contacts">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li>
@@ -81,13 +81,13 @@
 
         <p class="first">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу:</p>
 
-        <ul>
-          <li>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
-          <li>Подготовиться к <abbr title="Всероссийская проверочная работа"><a href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BE%D1%87%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0" target="_blank">ВПР</a></abbr>, <abbr title="Государственный выпускной экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%92%D0%AD" target="_blank">ГВЭ</a></abbr>, <abbr title="Единый государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%95%D0%B4%D0%B8%D0%BD%D1%8B%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ЕГЭ</a></abbr>, <abbr title="Основной государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ОГЭ</a></abbr>, <abbr title="Централизованное тестирование"><a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" target="_blank">ЦТ</a></abbr> или иным экзаменам.</li>
-          <li>Преодолеть языковой барьер и расширить словарный запас.</li>
-          <li>Развить навыки по всем видам речевой деятельности.</li>
-          <li>Уверенно говорить и чётко выражать свои мысли.</li>
-          <li>Устранить пробелы в школьной программе, подтянуть знания.</li>
+        <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fa-solid fa-pen-ruler"></i></span>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
+          <li><span class="fa-li"><i class="fa-solid fa-fire"></i></span>Подготовиться к <abbr title="Всероссийская проверочная работа"><a href="https://ru.wikipedia.org/wiki/%D0%92%D1%81%D0%B5%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BE%D1%87%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0" target="_blank">ВПР</a></abbr>, <abbr title="Государственный выпускной экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%92%D0%AD" target="_blank">ГВЭ</a></abbr>, <abbr title="Единый государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%95%D0%B4%D0%B8%D0%BD%D1%8B%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ЕГЭ</a></abbr>, <abbr title="Основной государственный экзамен"><a href="https://ru.wikipedia.org/wiki/%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B9_%D0%B3%D0%BE%D1%81%D1%83%D0%B4%D0%B0%D1%80%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%8D%D0%BA%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD" target="_blank">ОГЭ</a></abbr>, <abbr title="Централизованное тестирование"><a href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B5_%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5" target="_blank">ЦТ</a></abbr> или иным экзаменам.</li>
+          <li><span class="fa-li"><i class="fa-solid fa-globe"></i></span>Преодолеть языковой барьер и расширить словарный запас.</li>
+          <li><span class="fa-li"><i class="fa-solid fa-brain"></i></span>Развить навыки по всем видам речевой деятельности.</li>
+          <li><span class="fa-li"><i class="fa-solid fa-comment-dots"></i></span>Уверенно говорить и чётко выражать свои мысли.</li>
+          <li><span class="fa-li"><i class="fa-solid fa-bug"></i></span>Устранить пробелы в школьной программе, подтянуть знания.</li>
         </ul>
 
         <p class="second">Я имею пятилетний опыт обучения взрослых, подростков и детей, потому могу гарантировать хорошие показатели. Всегда работаю на результат, моя задача не <em>«позаниматься часок»</em>, а научить пользоваться языком и понимать его. Обучающиеся у меня начинают безошибочно изъясняться и понимать изучаемый язык в путешествиях, при общении с клиентами, некоторые даже с успехом стажируются в заграничных компаниях.</p>
