--- a/reviews.html
+++ b/reviews.html
@@ -15,6 +15,7 @@
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
   <!-- Masonry Library -->
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <!-- Masonry Responsive + Go Up Button JS -->
   <script src="scripts/masonry-resp+upBtn.js"></script>
 </head>
 <body>
@@ -27,7 +28,7 @@
   <!-- Header -->
   <nav id="header">
     <div class="logo">
-      <i class="fa fa-solid fa-graduation-cap"></i>
+      <i class="fa-solid fa-graduation-cap"></i>
       <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
     </div>
     <ul>
@@ -35,19 +36,19 @@
       <!-- Local Header -->
       <!-- <li>
         <a href="index.html">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="reviews.html">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="contacts.html">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li> -->
@@ -55,19 +56,19 @@
       <!-- Web Header -->
       <li>
         <a href="https://vesselchuck.github.io">
-          <i class="fa fa-solid fa-house-user"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/reviews">
-          <i class="fa fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
           <span>ОТЗЫВЫ</span>
         </a>
       </li>
       <li>
         <a href="https://vesselchuck.github.io/contacts">
-          <i class="fa fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li>
@@ -80,7 +81,7 @@
     <div class="grid-sizer"></div>
     <div class="gutter-sizer"></div>  
 
-  <!-- Reviews 2021 -->
+    <!-- Reviews 2021 -->
 
     <!-- Review №1 -->
     <div class="card grid-item">
@@ -258,7 +259,7 @@
       </div>
     </div>
 
-  <!-- Reviews 2022 -->
+    <!-- Reviews 2022 -->
 
     <!-- Review №12 -->
     <div class="card grid-item">
@@ -725,5 +726,55 @@
     </div>
 
   </section>
+  <!-- <section id="review-form">
+    <div id="review-form-card" class="card">
+
+      <div class="text">
+        <p class="info">Здесь Вы можете оставить свой отзыв о работе со мной.</p>
+      </div>
+
+      <form action="review-form.php" method="post" id="submit-review">
+
+        <div class="flex">
+          <div class="form-full-name">
+            <h3 class="title">
+              <i class="fa-solid fa-user"></i>
+              <span>Ваши Имя и Фамилия</span>
+            </h3>
+            <div class="text">
+              <p>
+                <input type="text" name="full-name" placeholder="Иван Иванов" maxlength="40">
+              </p>
+            </div>
+          </div>
+
+          <div class="form-photo">
+            <h3 class="title">
+              <i class="fa-solid fa-image"></i>
+              <span>Ваша фотография</span>
+            </h3>
+            <div class="text">
+              <p>
+                <input type="text" name="photo">
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-text">
+          <h3 class="title">
+            <i class="fa-solid fa-envelope-open-text"></i>
+            <span>Текст отзыва</span>
+          </h3>
+          <div class="text">
+            <p>
+              <textarea name="text" id="review-text" placeholder="Введите свой отзыв..."></textarea>
+            </p>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </section> -->
 </body>
 </html>
