--- a/reviews.html
+++ b/reviews.html
@@ -33,10 +33,65 @@
   <!-- Header -->
   <nav id="header">
     <div class="logo">
-      <i class="fa-graduation-cap fa-solid"></i>
-      <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+      <div class="main-logo">
+        <i class="fa-graduation-cap fa-solid"></i>
+        <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+      </div>
+
+      <button class="hamburger-menu" id="openHamBtn">
+        <nav id="openedHamTitle">
+          <div class="HamTitle">
+            <i class="fa-solid fa-bars"></i>
+            <span>МАРКЕЛОВ А. В.</span>
+          </div>
+          <ul id="openedHam">
+
+            <!-- Local Header -->
+            <!-- <li>
+              <a href="index.html">
+                <i class="fa-house-user fa-solid"></i>
+                <span>ГЛАВНАЯ</span>
+              </a>
+            </li>
+            <li>
+              <a href="reviews.html">
+                <i class="fa-solid fa-star"></i>
+                <span>ОТЗЫВЫ</span>
+              </a>
+            </li>
+            <li>
+              <a href="contacts.html">
+                <i class="fa-phone fa-solid"></i>
+                <span>КОНТАКТЫ</span>
+              </a>
+            </li> -->
+
+            <!-- Web Header -->
+            <li>
+              <a href="https://vesselchuck.github.io">
+                <i class="fa-house-user fa-solid"></i>
+                <span>ГЛАВНАЯ</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://vesselchuck.github.io/reviews">
+                <i class="fa-solid fa-star"></i>
+                <span>ОТЗЫВЫ</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://vesselchuck.github.io/contacts">
+                <i class="fa-phone fa-solid"></i>
+                <span>КОНТАКТЫ</span>
+              </a>
+            </li>
+
+          </ul>
+        </nav>
+      </button>
+
     </div>
-    <ul>
+    <ul class="navigation-menu">
 
       <!-- Local Header -->
       <!-- <li>
@@ -782,6 +837,22 @@
           <p>Арсений, очень ответственный и терпеливый преподаватель, настроен на положительный результат. Дружелюбный подход к ребёнку, понятно и спокойно объясняет материал. Всегда выходит на связь с родителями, приятный в общении. Сыну очень нравится и мы довольны обучением с таким репетитором.</p>
         </blockquote>
         <h4 class="date">1 ноября 2022</h4>
+      </div>
+    </div>
+
+    <!-- Review №40 -->
+    <div class="card grid-item">
+      <div class="card-body">
+        <div class="author">
+          <figure>
+            <img alt="Фотография женщины средних лет" class="avatar" src="assets/avatars/anna-2.webp" title="Фотография мамы ученика">
+          </figure>
+          <h2 class="title">Анна Шишкова</h2>
+        </div>
+        <blockquote class="text">
+          <p>Занимаемся 4 года, если бы ребёнку не нравились занятия и не давали результат, навряд ли бы так долго занимались. Арсений очень внимательный, интеллигентный, воспитанный, граммотный педагог! Он прислушивается и к родителям и к ученикам. Какие темы не понятны, все объяснит в удобной, доступной форме, 4 и 5 после занятий обеспечены! Кроме профессионализма Арсений обладает редким даром, красиво и витеевато излагать свои мысли! Ребёнок общаясь с ним на занятии впитывает это и учится также красиво говорить! Очень рекомендую данного педагога!</p>
+        </blockquote>
+        <h4 class="date">21 ноября 2022</h4>
       </div>
     </div>
 
