--- a/contacts.html
+++ b/contacts.html
@@ -26,10 +26,65 @@
   <!-- Header -->
   <nav id="header">
     <div class="logo">
-      <i class="fa-solid fa-graduation-cap"></i>
-      <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+      <div class="main-logo">
+        <i class="fa-graduation-cap fa-solid"></i>
+        <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+      </div>
+
+      <button class="hamburger-menu" id="openHamBtn">
+        <nav id="openedHamTitle">
+          <div class="HamTitle">
+            <i class="fa-solid fa-bars"></i>
+            <span>МАРКЕЛОВ А. В.</span>
+          </div>
+          <ul id="openedHam">
+
+            <!-- Local Header -->
+            <!-- <li>
+              <a href="index.html">
+                <i class="fa-house-user fa-solid"></i>
+                <span>ГЛАВНАЯ</span>
+              </a>
+            </li>
+            <li>
+              <a href="reviews.html">
+                <i class="fa-solid fa-star"></i>
+                <span>ОТЗЫВЫ</span>
+              </a>
+            </li>
+            <li>
+              <a href="contacts.html">
+                <i class="fa-phone fa-solid"></i>
+                <span>КОНТАКТЫ</span>
+              </a>
+            </li> -->
+
+            <!-- Web Header -->
+            <li>
+              <a href="https://vesselchuck.github.io">
+                <i class="fa-house-user fa-solid"></i>
+                <span>ГЛАВНАЯ</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://vesselchuck.github.io/reviews">
+                <i class="fa-solid fa-star"></i>
+                <span>ОТЗЫВЫ</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://vesselchuck.github.io/contacts">
+                <i class="fa-phone fa-solid"></i>
+                <span>КОНТАКТЫ</span>
+              </a>
+            </li>
+
+          </ul>
+        </nav>
+      </button>
+
     </div>
-    <ul>
+    <ul class="navigation-menu">
 
       <!-- Local Header -->
       <!-- <li>
