--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Репетитор Маркелов А.В.</title>
+  <title>Контакты | Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
     <div class="logo">
       <div class="main-logo">
         <i class="fa-graduation-cap fa-solid"></i>
-        <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+        <span>РЕПЕТИТОР <abbr title="Маркелов Арсений Владимирович">МАРКЕЛОВ А. В.</abbr></span>
       </div>
 
       <button class="hamburger-menu" id="openHamBtn">
@@ -139,7 +139,7 @@
 
       <div>
         <div class="text">
-          <p class="info">Позвоните, либо же напишите мне, если желаете получить консультацию об отдельных вопросах или назначить пробное занятие. Во время этого занятия мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды.</p>
+          <p class="info">Позвоните, либо напишите, если желаете проконсультироваться об отдельных вопросах или назначить пробное занятие. На этом занятии мы познакомимся, определим уровень знаний языка, а в дальнейшем будем планировать занятия под ваши нужды. Напоминаю, меня зовут — <strong>Маркелов Арсений Владимирович</strong>.</p>
         </div>
 
         <div class="h-card vcard flex wrap">
@@ -189,7 +189,7 @@
           <span>Рабочие часы</span>
         </h3>
         <div class="text">
-          <p>Провожу занятия, в основном, с <strong>14:00</strong> и до <strong>21:00</strong> по московскому времени. Желательно, связываться со мной до или после этого периода времени, либо ограничится сообщением.</p>
+          <p>Провожу занятия в будни, примерно с <strong>14:00</strong> и до <strong>21:00</strong> по московскому времени. Желательно, связываться со мной до или после этого периода времени, либо ограничится сообщением.</p>
         </div>
 
       </div>
