--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Репетитор Маркелов А.В.</title>
+  <title>Главная | Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ae090e8de5.js" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
     <div class="logo">
       <div class="main-logo">
         <i class="fa-graduation-cap fa-solid"></i>
-        <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+        <span>РЕПЕТИТОР <abbr title="Маркелов Арсений Владимирович">МАРКЕЛОВ А. В.</abbr></span>
       </div>
 
       <button class="hamburger-menu" id="openHamBtn">
@@ -134,7 +134,7 @@
     <div id="about-me-card" class="card">
       <div class="text">
 
-        <p class="first">Являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу:</p>
+        <p class="first">Моё имя — <strong>Маркелов Арсений Владимирович</strong>, я являюсь квалифицированным бакалавром лингвистики, профиля теория и методика преподавания иностранных языков и культур. Мой уровень знаний английского языка <abbr title="Шестой и последний уровень, в повседневной речи называется «билингвальным»"><strong>C2 (Proficient)</strong></abbr>, помогу вам:</p>
 
         <ul class="fa-ul">
           <li><span class="fa-li"><i class="fa-solid fa-pen-ruler"></i></span>Выполнять домашние задания, контрольные и сдавать зачёты.</li>
