--- a/reviews.html
+++ b/reviews.html
@@ -35,7 +35,7 @@
     <div class="logo">
       <div class="main-logo">
         <i class="fa-graduation-cap fa-solid"></i>
-        <span>РЕПЕТИТОР − МАРКЕЛОВ АРСЕНИЙ ВЛАДИМИРОВИЧ</span>
+        <span>РЕПЕТИТОР <abbr title="Маркелов Арсений Владимирович">МАРКЕЛОВ А. В.</abbr></span>
       </div>
 
       <button class="hamburger-menu" id="openHamBtn">
@@ -96,7 +96,7 @@
       <!-- Local Header -->
       <!-- <li>
         <a href="index.html">
-          <i class="fa-house-user fa-solid"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
@@ -108,7 +108,7 @@
       </li>
       <li>
         <a href="contacts.html">
-          <i class="fa-phone fa-solid"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li> -->
@@ -116,7 +116,7 @@
       <!-- Web Header -->
       <li>
         <a href="https://vesselchuck.github.io">
-          <i class="fa-house-user fa-solid"></i>
+          <i class="fa-solid fa-house-user"></i>
           <span>ГЛАВНАЯ</span>
         </a>
       </li>
@@ -128,7 +128,7 @@
       </li>
       <li>
         <a href="https://vesselchuck.github.io/contacts">
-          <i class="fa-phone fa-solid"></i>
+          <i class="fa-solid fa-phone"></i>
           <span>КОНТАКТЫ</span>
         </a>
       </li>
