--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Маркелов Арсений Владимирович">
+  <meta name="description" content="Главная страница личного сайта Маркелова Арсения Владимировича, частного репетитора по английскому языку.">
+  <meta name="keywords" content="английский язык, английский, арсений, арсений маркелов, занятие, маркелов, обучение, опытный, педагог, преподаватель, проверенный, репетитор, урок, учитель, частный">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная | Репетитор Маркелов А.В.</title>
   <link rel="icon" type="image/x-icon" href="assets/interface/favicon.ico">
