--- a/reviews.html
+++ b/reviews.html
@@ -786,7 +786,7 @@
           <figure>
             <img alt="Фотография женщины средних лет" class="avatar" src="assets/avatars/svetlana.webp" title="Фотография мамы ученика">
           </figure>
-          <h2 class="title">Светлана Куликова</h2>
+          <h2 class="title">Светлана Косарева</h2>
         </div>
         <blockquote class="text">
           <p>Уроки английского проходят замечательно. Арсений Владимирович профессионал своего дела. Сыну нравится формат уроков, все понятно, комфортно и интересно. Продолжаем заниматься уже пять месяцев.</p>
