Changes to be committed: 	new file:   assets/avatars/taisia.webp 	modified:   assets/interface/bg.webp 	modified:   contacts.html 	modified:   reviews.html 	modified:   styles/style.less

--- a/contacts.html
+++ b/contacts.html
@@ -172,7 +172,7 @@
               <span>Discord</span>
             </h3>
             <div class="text">
-              <a>Vesselchuck#8687</a>
+              <a href="https://discordapp.com/users/277533560213209098/" target="_blank">Vesselchuck</a>
             </div>
           </div>
 
@@ -182,7 +182,7 @@
               <span>Telegram</span>
             </h3>
             <div class="text">
-              <a href="https://t.me/Vesselchuck" target="_blank">https://t.me/Vesselchuck</a>
+              <a href="https://t.me/Vesselchuck" target="_blank">@Vesselchuck</a>
             </div>
           </div>
         </div>
