Added three new reviews.

--- a/reviews.html
+++ b/reviews.html
@@ -1044,6 +1044,54 @@
       </div>
     </div>
 
+    <!-- Review №50 -->
+    <div class="card grid-item">
+      <div class="card-body">
+        <div class="author">
+          <figure>
+            <img alt="Фотография женщины средних лет" class="avatar" src="assets/avatars/angelica-shcherbina.webp" title="Фотография мамы ученика">
+          </figure>
+          <h2 class="title">Анжелика Щербина</h2>
+        </div>
+        <blockquote class="text">
+          <p>Очень хороший специалист 👍👍👍, также очень приятный и вежливый человек, сын занимался весь учебный год, подтянули английский,сын очень доволен, дальше будем заниматься с нового учебного года.</p>
+        </blockquote>
+        <h4 class="date">4 июня 2024</h4>
+      </div>
+    </div>
+
+    <!-- Review №51 -->
+    <div class="card grid-item">
+      <div class="card-body">
+        <div class="author">
+          <figure>
+            <img alt="Фотография женщины средних лет" class="avatar" src="assets/avatars/irina-kulakova.webp" title="Фотография мамы ученика">
+          </figure>
+          <h2 class="title">Ирина Кулакова</h2>
+        </div>
+        <blockquote class="text">
+          <p>Замечательный репетитор! Подтянул сына по английскому языку для сдачи теста! Тест написан на отлично!!! Прекрасный разговорный английский.</p>
+        </blockquote>
+        <h4 class="date">22 июня 2024</h4>
+      </div>
+    </div>
+
+    <!-- Review №52 -->
+    <div class="card grid-item">
+      <div class="card-body">
+        <div class="author">
+          <figure>
+            <img alt="Фотография молодого парня" class="avatar" src="assets/avatars/daniil-berestov.webp" title="Фотография молодого парня">
+          </figure>
+          <h2 class="title">Даниил Берестов</h2>
+        </div>
+        <blockquote class="text">
+          <p>Начал заниматься с Арсением со знаниями чуть ниже школьного. После занятий с ним я заметил, что лучше стал говорить, понимать лексику английского, разбираться в грамматике. Я не только узнал что-то новое, но и переосмыслил старое. Всем советую.</p>
+        </blockquote>
+        <h4 class="date">10 июля 2024</h4>
+      </div>
+    </div>
+
   </section>
 </body>
 </html>
